tui/src/views/snapshots/complior__views__fix__tests__snapshot_fix_single_mode_type_b.snap
---
source: tui/src/views/fix.rs
expression: buf
---
┌ Fix — OBL-006 ───────────────────────┐┌ New Document ────────────────────────────────────────────┐
│  Score: 32 → 37  (+5)  |  2/3        ││ ── CREATE ── docs/fria.md ────────────────────────────   │
│ ──────────────────────────────────── ││  (file does not exist yet)                               │
│  [B] l2-fria                         ││                                                          │
│  Missing FRIA document               ││ ── Proposed Content ──────────────────────────────────   │
│  Art. 27(1)                          ││  # Fundamental Rights Impact Assessment                  │
│                                      ││                                                          │
│  Impact: +5 points                   ││                                                          │
│                                      ││                                                          │
│ ──────────────────────────────────── ││                                                          │
│  Esc:back j/k:next/prev d:diff       ││                                                          │
│Enter:apply                           ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
